--- a/src/style.css
+++ b/src/style.css
@@ -4,10 +4,10 @@ body{
   background-origin: border-box;
   background-size: contain;
 };
-
 body{
   display: flex;
 }
+
 main{
   display: flex;
   flex-direction: column;
@@ -112,6 +112,7 @@ label{
   border-color: #BF9550;
   box-shadow: 4px 4px 8px 2px rgba(0,0,0,.5);
 }
+
 .botonC{
   background: #BF9550;
   color: white;
@@ -124,8 +125,9 @@ label{
   box-shadow: 6px 6px 8px 4px rgba(0,0,0,.5);
   font-size: 1em;
   font-family: sans-serif;
-  margin: 0 30px 0px 200px;
+  margin: 0 30px 0 200px;
 }
+
 .botonD{
   background: #BF9550;
   color: white;
