--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 body{
-  background-image: url('../fotos/fondoCC.jpg');
+  background-image: url('../fotos/fondoCC1.jpg');
   background-repeat: no-repeat;
   background-origin: border-box;
   background-size: contain;
